--- a/Acceso DNIe SmartCardIO/Acceso DNIe SmartCardIO/nbproject/private/private.properties
+++ b/Acceso DNIe SmartCardIO/Acceso DNIe SmartCardIO/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Juan Carlos\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
